--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-My GitHub Page
+<html>
+	<body>
+		<div id="banner">
+			<img src="bibmake.png" alt="BiblioMake">
+		</div>
+	
+	</body>
+
+
+</html>
