--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<div id="banner">
-			<img src="bibmake.png" alt="BiblioMake">
+			<img src="bibmake.png" alt="BiblioMake" width="100%">
 		</div>
 	
 	</body>
